fix publications, other tweaks

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,17 +13,17 @@
 	publisher = {SAGE Publications Sage CA: Los Angeles, CA},
 	title = {Site considerations for points of dispensing after biological terrorist attack: integrated role of transportation planning and medical services},
 	volume = {2234},
-	year = {2011}}
+	year = {2011},
+	html = {https://doi.org/10.3141/2234-06}}
 
 @article{ringer2021methodological,
 	author = {Ringer, Hayden and Whitehead, Jared P and Krometis, Justin and Harris, Ronald A and Glatt-Holtz, Nathan and Giddens, Spencer and Ashcraft, Claire and Carver, Garret and Robertson, Adam and Harward, McKay and others},
 	date-added = {2021-03-26 09:33:22 -0400},
 	date-modified = {2021-03-26 09:33:22 -0400},
-	journal = {Journal of Geophysical Research},
+	journal = {Journal of Geophysical Research (in press)},
 	title = {Methodological reconstruction of historical seismic events from anecdotal accounts of destructive tsunamis: a case study for the great 1852 Banda arc mega-thrust earthquake and tsunami},
-	url = {https://arxiv.org/abs/2009.14272},
-	year = {2021 (in press)},
-	Bdsk-Url-1 = {https://arxiv.org/abs/2009.14272}}
+	arxiv = {2009.14272},
+	year = {2021}}
 
 @article{krometis2004lane,
 	author = {Krometis, Justin},
@@ -32,6 +32,7 @@
 	publisher = {Virginia Tech},
 	title = {{Lane preference in a simple traffic model}},
 	url = {http://hdl.handle.net/10919/42365},
+	html = {http://hdl.handle.net/10919/42365},
 	year = {2004}}
 
 @phdthesis{krometis2018bayesian,
@@ -41,6 +42,7 @@
 	school = {Virginia Polytechnic Institute and State University},
 	title = {{A {B}ayesian Approach to Estimating Background Flows from a Passive Scalar}},
 	url = {http://hdl.handle.net/10919/83783},
+	html = {http://hdl.handle.net/10919/83783},
 	year = {2018},
 	Bdsk-Url-1 = {http://hdl.handle.net/10919/83783}}
 
@@ -49,6 +51,8 @@
 	date-added = {2021-03-26 09:30:23 -0400},
 	date-modified = {2021-03-26 09:30:23 -0400},
 	doi = {10.1209/epl/i2005-10006-6},
+  arxiv = {arXiv:cond-mat/0503413},
+  html = {https://doi.org/10.1209/epl/i2005-10006-6},
 	journal = {EPL (Europhysics Letters)},
 	number = {3},
 	pages = {299},
@@ -64,6 +68,7 @@
 	journal = {arXiv preprint arXiv:2011.04493},
 	title = {On the accept-reject mechanism for {M}etropolis-{H}astings algorithms},
 	url = {https://arxiv.org/abs/2011.04493},
+	arxiv = {2011.04493},
 	year = {2020},
 	Bdsk-Url-1 = {https://arxiv.org/abs/2011.04493}}
 
@@ -75,6 +80,8 @@
 	journal = {Journal of Computational Physics},
 	title = {{{GPU}-Accelerated Particle Methods for Evaluation of Sparse Observations for Inverse Problems Constrained by Diffusion {PDE}s}},
 	year = {2019},
+	html = {https://doi.org/10.1016/j.jcp.2019.04.034},
+  arxiv = {1808.10580},
 	Bdsk-Url-1 = {https://doi.org/10.1016/j.jcp.2019.04.034}}
 
 @article{borggaard2020bayesian,
@@ -88,6 +95,8 @@
 	title = {{A {B}ayesian Approach to Estimating Background Flows from a Passive Scalar}},
 	volume = {8},
 	year = {2020},
+	html = {https://doi.org/10.1137/19M1267544},
+  arxiv = {1808.01084},
 	Bdsk-Url-1 = {https://doi.org/10.1137/19M1267544}}
 
 @article{borggaard2020consistency,
@@ -100,6 +109,8 @@
 	pages = {1762-1783},
 	title = {On {B}ayesian Consistency for Flows Observed Through a Passive Scalar},
 	url = {https://arxiv.org/abs/1809.06228},
+	arxiv = {1809.06228},
+	html = {https://doi.org/10.1214/19-AAP1542},
 	volume = {30},
 	year = {2020},
 	Bdsk-Url-1 = {https://arxiv.org/abs/1809.06228}}
