add projects and selected papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,7 +23,9 @@
 	journal = {Journal of Geophysical Research (in press)},
 	title = {Methodological reconstruction of historical seismic events from anecdotal accounts of destructive tsunamis: a case study for the great 1852 Banda arc mega-thrust earthquake and tsunami},
 	arxiv = {2009.14272},
-	year = {2021}}
+	year = {2021},
+  selected = {true}
+}
 
 @article{krometis2004lane,
 	author = {Krometis, Justin},
@@ -70,7 +72,9 @@
 	url = {https://arxiv.org/abs/2011.04493},
 	arxiv = {2011.04493},
 	year = {2020},
-	Bdsk-Url-1 = {https://arxiv.org/abs/2011.04493}}
+	Bdsk-Url-1 = {https://arxiv.org/abs/2011.04493},
+  selected = {true}
+}
 
 @article{borggaard2019particle,
 	author = {Borggaard, Jeff and Glatt-Holtz, Nathan and Krometis, Justin},
@@ -82,7 +86,9 @@
 	year = {2019},
 	html = {https://doi.org/10.1016/j.jcp.2019.04.034},
   arxiv = {1808.10580},
-	Bdsk-Url-1 = {https://doi.org/10.1016/j.jcp.2019.04.034}}
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.jcp.2019.04.034},
+  selected = {true}
+}
 
 @article{borggaard2020bayesian,
 	author = {Borggaard, Jeff and Glatt-Holtz, Nathan and Krometis, Justin},
@@ -97,7 +103,8 @@
 	year = {2020},
 	html = {https://doi.org/10.1137/19M1267544},
   arxiv = {1808.01084},
-	Bdsk-Url-1 = {https://doi.org/10.1137/19M1267544}}
+	Bdsk-Url-1 = {https://doi.org/10.1137/19M1267544},
+}
 
 @article{borggaard2020consistency,
 	author = {Borggaard, Jeff and Glatt-Holtz, Nathan and Krometis, Justin},
@@ -113,4 +120,6 @@
 	html = {https://doi.org/10.1214/19-AAP1542},
 	volume = {30},
 	year = {2020},
-	Bdsk-Url-1 = {https://arxiv.org/abs/1809.06228}}
+	Bdsk-Url-1 = {https://arxiv.org/abs/1809.06228},
+  selected = {true}
+}
