add cv, teaching

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
 
 
 @article{ma2011site,
+  abbr={TRB},
 	author = {Ma, Yongchang and Willauer, David and Krometis, Justin and Sen, Atri and Baccam, Sid},
 	date-added = {2021-03-26 09:35:52 -0400},
 	date-modified = {2021-03-26 09:35:52 -0400},
@@ -17,6 +18,7 @@
 	html = {https://doi.org/10.3141/2234-06}}
 
 @article{ringer2021methodological,
+  abbr={JGR},
 	author = {Ringer, Hayden and Whitehead, Jared P and Krometis, Justin and Harris, Ronald A and Glatt-Holtz, Nathan and Giddens, Spencer and Ashcraft, Claire and Carver, Garret and Robertson, Adam and Harward, McKay and others},
 	date-added = {2021-03-26 09:33:22 -0400},
 	date-modified = {2021-03-26 09:33:22 -0400},
@@ -28,6 +30,7 @@
 }
 
 @article{krometis2004lane,
+  abbr={Thesis},
 	author = {Krometis, Justin},
 	date-added = {2021-03-26 09:31:30 -0400},
 	date-modified = {2021-03-26 09:31:30 -0400},
@@ -38,6 +41,7 @@
 	year = {2004}}
 
 @phdthesis{krometis2018bayesian,
+  abbr={Thesis},
 	author = {Krometis, Justin},
 	date-added = {2021-03-26 09:30:52 -0400},
 	date-modified = {2021-03-26 09:30:52 -0400},
@@ -49,13 +53,14 @@
 	Bdsk-Url-1 = {http://hdl.handle.net/10919/83783}}
 
 @article{schmittmann2005will,
+  abbr={EPL},
 	author = {Schmittmann, Beate and Krometis, Justin and Zia, Royce KP},
 	date-added = {2021-03-26 09:30:23 -0400},
 	date-modified = {2021-03-26 09:30:23 -0400},
 	doi = {10.1209/epl/i2005-10006-6},
   arxiv = {arXiv:cond-mat/0503413},
   html = {https://doi.org/10.1209/epl/i2005-10006-6},
-	journal = {EPL (Europhysics Letters)},
+	journal = {Europhysics Letters},
 	number = {3},
 	pages = {299},
 	publisher = {IOP Publishing},
@@ -77,6 +82,7 @@
 }
 
 @article{borggaard2019particle,
+  abbr={JCP},
 	author = {Borggaard, Jeff and Glatt-Holtz, Nathan and Krometis, Justin},
 	date-added = {2021-03-26 09:28:35 -0400},
 	date-modified = {2021-03-26 09:28:35 -0400},
@@ -91,6 +97,7 @@
 }
 
 @article{borggaard2020bayesian,
+  abbr={JUQ},
 	author = {Borggaard, Jeff and Glatt-Holtz, Nathan and Krometis, Justin},
 	date-added = {2021-03-26 09:28:35 -0400},
 	date-modified = {2021-03-26 09:28:35 -0400},
@@ -107,6 +114,7 @@
 }
 
 @article{borggaard2020consistency,
+  abbr={AAP},
 	author = {Borggaard, Jeff and Glatt-Holtz, Nathan and Krometis, Justin},
 	date-added = {2021-03-26 09:28:35 -0400},
 	date-modified = {2021-03-26 09:28:35 -0400},
