update jgr paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,7 +22,8 @@
 	author = {Ringer, Hayden and Whitehead, Jared P and Krometis, Justin and Harris, Ronald A and Glatt-Holtz, Nathan and Giddens, Spencer and Ashcraft, Claire and Carver, Garret and Robertson, Adam and Harward, McKay and others},
 	date-added = {2021-03-26 09:33:22 -0400},
 	date-modified = {2021-03-26 09:33:22 -0400},
-	journal = {Journal of Geophysical Research (in press)},
+  doi = {10.1029/2020JB021107},
+	journal = {Journal of Geophysical Research},
 	title = {Methodological reconstruction of historical seismic events from anecdotal accounts of destructive tsunamis: a case study for the great 1852 Banda arc mega-thrust earthquake and tsunami},
 	arxiv = {2009.14272},
 	year = {2021},
