source: update jgr paper (again)

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,8 @@
 	title = {Methodological reconstruction of historical seismic events from anecdotal accounts of destructive tsunamis: a case study for the great 1852 Banda arc mega-thrust earthquake and tsunami},
 	arxiv = {2009.14272},
 	year = {2021},
-  selected = {true}
+  selected = {true},
+  html = {https://doi.org/10.1029/2020JB021107},
 }
 
 @article{krometis2004lane,
