source: add nsf grant, new arxiv submission

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -132,3 +132,16 @@
 	Bdsk-Url-1 = {https://arxiv.org/abs/1809.06228},
   selected = {true}
 }
+
+
+@article{krometis2021embracing,
+	author = {Krometis, Justin A and Ringer, Hayden J and Whitehead, Jared P and Glatt-Holtz, Nathan E and Harris, Ronald A},
+	date-added = {2021-06-15 22:12:08 -0400},
+	date-modified = {2021-06-15 22:14:10 -0400},
+	journal = {arXiv preprint arXiv:2106.07797},
+	title = {Embracing Uncertainty in ``Small Data'' Problems: Estimating Earthquakes from Historical Anecdotes},
+  arxiv = {2106.07797},
+	url = {https://arxiv.org/abs/2106.07797},
+	year = {2021}
+}
+
