source: new job, ijerph pub

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -145,3 +145,12 @@
 	year = {2021}
 }
 
+@article{marcillo2021demographics,
+  abbr={IJERPH},
+	author = {Marcillo, Cristina and Krometis, Leigh-Anne and Krometis, Justin},
+	date-added = {2021-12-14},
+	journal = {International Journal of Environmental Research and Public Health},
+	title = {The demographics of {SDWA} compliance in {V}irginia community water systems},
+	year = {2021}
+}
+
