source: add link to ijerph paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -149,8 +149,11 @@
   abbr={IJERPH},
 	author = {Marcillo, Cristina and Krometis, Leigh-Anne and Krometis, Justin},
 	date-added = {2021-12-14},
+  doi = {10.3390/ijerph182413254},
 	journal = {International Journal of Environmental Research and Public Health},
 	title = {The demographics of {SDWA} compliance in {V}irginia community water systems},
+  url = {https://www.mdpi.com/1660-4601/18/24/13254},
+  html = {https://www.mdpi.com/1660-4601/18/24/13254},
 	year = {2021}
 }
 
