update cv+pubs, add math appointment

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -157,3 +157,39 @@
 	year = {2021}
 }
 
+@article{sobien2022improving,
+  abbr={MAKE},
+  title = {Improving {{Deep Learning}} for {{Maritime Remote Sensing}} through {{Data Augmentation}} and {{Latent Space}}},
+  author = {Sobien, Daniel and Higgins, Erik and Krometis, Justin and Kauffman, Justin and Freeman, Laura},
+  year = {2022},
+  month = sep,
+  journal = {Machine Learning and Knowledge Extraction},
+  volume = {4},
+  number = {3},
+  pages = {665--687},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  issn = {2504-4990},
+  doi = {10.3390/make4030031},
+  abstract = {Training deep learning models requires having the right data for the problem and understanding both your data and the models' performance on that data. Training deep learning models is difficult when data are limited, so in this paper, we seek to answer the following question: how can we train a deep learning model to increase its performance on a targeted area with limited data? We do this by applying rotation data augmentations to a simulated synthetic aperture radar (SAR) image dataset. We use the Uniform Manifold Approximation and Projection (UMAP) dimensionality reduction technique to understand the effects of augmentations on the data in latent space. Using this latent space representation, we can understand the data and choose specific training samples aimed at boosting model performance in targeted under-performing regions without the need to increase training set sizes. Results show that using latent space to choose training data significantly improves model performance in some cases; however, there are other cases where no improvements are made. We show that linking patterns in latent space is a possible predictor of model performance, but results require some experimentation and domain knowledge to determine the best options.},
+  copyright = {http://creativecommons.org/licenses/by/3.0/},
+  langid = {english},
+  keywords = {data augmentation,deep neural network,dimensionality reduction,latent space,simulated data,synthetic aperture radar,UMAP},
+}
+
+@article{glatt-holtz2022parallel,
+  title = {Parallel {{MCMC Algorithms}}: {{Theoretical Foundations}}, {{Algorithm Design}}, {{Case Studies}}},
+  shorttitle = {Parallel {{MCMC Algorithms}}},
+  author = {{Glatt-Holtz}, Nathan E. and Holbrook, Andrew J. and Krometis, Justin A. and Mondaini, Cecilia F.},
+  year = {2022},
+  month = sep,
+  number = {arXiv:2209.04750},
+  eprint = {2209.04750},
+  eprinttype = {arxiv},
+  primaryclass = {math, stat},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2209.04750},
+	url = {https://arxiv.org/abs/2209.04750},
+  abstract = {Parallel Markov Chain Monte Carlo (pMCMC) algorithms generate clouds of proposals at each step to efficiently resolve a target probability distribution. We build a rigorous foundational framework for pMCMC algorithms that situates these methods within a unified `extended phase space' measure-theoretic formalism. Drawing on our recent work that provides a comprehensive theory for reversible single proposal methods, we herein derive general criteria for multiproposal acceptance mechanisms which yield unbiased chains on general state spaces. Our formulation encompasses a variety of methodologies, including proposal cloud resampling and Hamiltonian methods, while providing a basis for the derivation of novel algorithms. In particular, we obtain a top-down picture for a class of methods arising from `conditionally independent' proposal structures. As an immediate application, we identify several new algorithms including a multiproposal version of the popular preconditioned Crank-Nicolson (pCN) sampler suitable for high- and infinite-dimensional target measures which are absolutely continuous with respect to a Gaussian base measure. To supplement our theoretical results, we carry out a selection of numerical case studies that evaluate the efficacy of these novel algorithms. First, noting that the true potential of pMCMC algorithms arises from their natural parallelizability, we provide a limited parallelization study using TensorFlow and a graphics processing unit to scale pMCMC algorithms that leverage as many as 100k proposals at each step. Second, we use our multiproposal pCN algorithm (mpCN) to resolve a selection of problems in Bayesian statistical inversion for partial differential equations motivated by fluid measurement. These examples provide preliminary evidence of the efficacy of mpCN for high-dimensional target distributions featuring complex geometries and multimodal structures.},
+  archiveprefix = {arXiv},
+  keywords = {62D05; 60J22; 65C05; 65Y05,Mathematics - Probability,Mathematics - Statistics Theory,Statistics - Computation},
+}
