add stokes arxiv submission

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -196,3 +196,22 @@
   keywords = {62D05; 60J22; 65C05; 65Y05,Mathematics - Probability,Mathematics - Statistics Theory,Statistics - Computation},
   arxiv = {2209.04750},
 }
+
+@misc{borggaard2022statistical,
+  title = {A {{Statistical Framework}} for {{Domain Shape Estimation}} in {{Stokes Flows}}},
+  author = {Borggaard, Jeff and {Glatt-Holtz}, Nathan E. and Krometis, Justin A.},
+  year = {2022},
+  month = dec,
+  number = {arXiv:2212.03365},
+  eprint = {2212.03365},
+  eprinttype = {arxiv},
+  primaryclass = {physics, stat},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2212.03365},
+	url = {https://arxiv.org/abs/2212.03365},
+  abstract = {We develop and implement a Bayesian approach for the estimation of the shape of a two dimensional annular domain enclosing a Stokes flow from sparse and noisy observations of the enclosed fluid. Our setup includes the case of direct observations of the flow field as well as the measurement of concentrations of a solute passively advected by and diffusing within the flow. Adopting a statistical approach provides estimates of uncertainty in the shape due both to the non-invertibility of the forward map and to error in the measurements. When the shape represents a design problem of attempting to match desired target outcomes, this "uncertainty" can be interpreted as identifying remaining degrees of freedom available to the designer. We demonstrate the viability of our framework on three concrete test problems. These problems illustrate the promise of our framework for applications while providing a collection of test cases for recently developed Markov Chain Monte Carlo (MCMC) algorithms designed to resolve infinite dimensional statistical quantities.},
+  archiveprefix = {arXiv},
+  copyright = {All rights reserved},
+  keywords = {76M21; 76D07; 65C05; 35R30; 60J22,Mathematics - Optimization and Control,Physics - Fluid Dynamics,Statistics - Computation},
+  file = {C\:\\Users\\jkrometi\\Zotero\\storage\\UDNLS2VX\\Borggaard et al. - 2022 - A Statistical Framework for Domain Shape Estimatio.pdf;C\:\\Users\\jkrometi\\Zotero\\storage\\ZHH3ASCT\\2212.html}
+}
