fix arxiv link to stokes

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -213,5 +213,6 @@
   archiveprefix = {arXiv},
   copyright = {All rights reserved},
   keywords = {76M21; 76D07; 65C05; 35R30; 60J22,Mathematics - Optimization and Control,Physics - Fluid Dynamics,Statistics - Computation},
-  file = {C\:\\Users\\jkrometi\\Zotero\\storage\\UDNLS2VX\\Borggaard et al. - 2022 - A Statistical Framework for Domain Shape Estimatio.pdf;C\:\\Users\\jkrometi\\Zotero\\storage\\ZHH3ASCT\\2212.html}
+  file = {C\:\\Users\\jkrometi\\Zotero\\storage\\UDNLS2VX\\Borggaard et al. - 2022 - A Statistical Framework for Domain Shape Estimatio.pdf;C\:\\Users\\jkrometi\\Zotero\\storage\\ZHH3ASCT\\2212.html},
+  arxiv = {2212.03365},
 }
