update cv; add ip & camwa papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -197,22 +197,61 @@
   arxiv = {2209.04750},
 }
 
-@misc{borggaard2022statistical,
-  title = {A {{Statistical Framework}} for {{Domain Shape Estimation}} in {{Stokes Flows}}},
-  author = {Borggaard, Jeff and {Glatt-Holtz}, Nathan E. and Krometis, Justin A.},
-  year = {2022},
-  month = dec,
-  number = {arXiv:2212.03365},
-  eprint = {2212.03365},
-  eprinttype = {arxiv},
-  primaryclass = {physics, stat},
-  publisher = {{arXiv}},
-  doi = {10.48550/arXiv.2212.03365},
-	url = {https://arxiv.org/abs/2212.03365},
-  abstract = {We develop and implement a Bayesian approach for the estimation of the shape of a two dimensional annular domain enclosing a Stokes flow from sparse and noisy observations of the enclosed fluid. Our setup includes the case of direct observations of the flow field as well as the measurement of concentrations of a solute passively advected by and diffusing within the flow. Adopting a statistical approach provides estimates of uncertainty in the shape due both to the non-invertibility of the forward map and to error in the measurements. When the shape represents a design problem of attempting to match desired target outcomes, this "uncertainty" can be interpreted as identifying remaining degrees of freedom available to the designer. We demonstrate the viability of our framework on three concrete test problems. These problems illustrate the promise of our framework for applications while providing a collection of test cases for recently developed Markov Chain Monte Carlo (MCMC) algorithms designed to resolve infinite dimensional statistical quantities.},
-  archiveprefix = {arXiv},
-  copyright = {All rights reserved},
-  keywords = {76M21; 76D07; 65C05; 35R30; 60J22,Mathematics - Optimization and Control,Physics - Fluid Dynamics,Statistics - Computation},
-  file = {C\:\\Users\\jkrometi\\Zotero\\storage\\UDNLS2VX\\Borggaard et al. - 2022 - A Statistical Framework for Domain Shape Estimatio.pdf;C\:\\Users\\jkrometi\\Zotero\\storage\\ZHH3ASCT\\2212.html},
+@misc{paskett2023tale,
+	title = {A tale of two faults: {Statistical} reconstruction of the 1820 {Flores} {Sea} earthquake using tsunami observations alone},
+	shorttitle = {A tale of two faults},
+	url = {http://arxiv.org/abs/2305.01718},
+	doi = {10.48550/arXiv.2305.01718},
+	abstract = {Using a Bayesian approach we compare anecdotal tsunami runup observations from the 29 December 1820 Flores Sea earthquake with close to 200,000 tsunami simulations to determine the most probable earthquake parameters causing the tsunami. Using a dual hypothesis of the source earthquake either originating from the Flores Thrust or the Walanae/Selayar Fault, we found that neither source perfectly matches the observational data, particularly while satisfying seismic constraints of the region. However, there is clear quantitative evidence that a major earthquake on the Walanae/Selayar Fault more closely aligns with historical records of the tsunami, and earthquake shaking. The simulated data available from this study alludes to the potential for a different source in the region or the occurrence of an earthquake near where both faults potentially merge and simultaneously rupture similar to the 2016 Kaikoura, New Zealand event.},
+	urldate = {2023-07-25},
+	publisher = {arXiv},
+	author = {Paskett, T. and Whitehead, J. P. and Harris, R. A. and Ashcroft, C. and Krometis, J. A. and Sorensen, I. and Wonnacott, R.},
+	month = may,
+	year = {2023},
+	note = {arXiv:2305.01718 [physics]},
+	keywords = {Physics - Geophysics},
+	annote = {Comment: 22 pages, 9 figures},
+	file = {arXiv Fulltext PDF:C\:\\Users\\jkrometi\\Zotero\\storage\\WQP2G7DV\\Paskett et al. - 2023 - A tale of two faults Statistical reconstruction o.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\jkrometi\\Zotero\\storage\\BJDXVMQI\\2305.html:text/html},
+	arxiv = {2305.01718},
+}
+
+@article{borggaard2023statistical,
+	title = {A statistical framework for domain shape estimation in {Stokes} flows},
+	volume = {39},
+	issn = {0266-5611},
+	url = {https://dx.doi.org/10.1088/1361-6420/acdd8e},
+	doi = {10.1088/1361-6420/acdd8e},
+	abstract = {We develop and implement a Bayesian approach for the estimation of the shape of a two dimensional annular domain enclosing a Stokes flow from sparse and noisy observations of the enclosed fluid. Our setup includes the case of direct observations of the flow field as well as the measurement of concentrations of a solute passively advected by and diffusing within the flow. Adopting a statistical approach provides estimates of uncertainty in the shape due both to the non-invertibility of the forward map and to error in the measurements. When the shape represents a design problem of attempting to match desired target outcomes, this ‘uncertainty’ can be interpreted as identifying remaining degrees of freedom available to the designer. We demonstrate the viability of our framework on three concrete test problems. These problems illustrate the promise of our framework for applications while providing a collection of test cases for recently developed Markov chain Monte Carlo algorithms designed to resolve infinite-dimensional statistical quantities.},
+	language = {en},
+	number = {8},
+	urldate = {2023-06-30},
+	journal = {Inverse Problems},
+	author = {Borggaard, Jeff and Glatt-Holtz, Nathan E. and Krometis, Justin},
+	month = jun,
+	year = {2023},
+	note = {Publisher: IOP Publishing},
+	pages = {085009},
+	file = {IOP Full Text PDF:C\:\\Users\\jkrometi\\Zotero\\storage\\CIJCCYX5\\Borggaard et al. - 2023 - A statistical framework for domain shape estimatio.pdf:application/pdf},
   arxiv = {2212.03365},
+  html = {https://dx.doi.org/10.1088/1361-6420/acdd8e},
+  abbr={IP},
+}
+
+@article{snyder2023numerical,
+	title = {A numerical comparison of simplified {Galerkin} and machine learning reduced order models for vaginal deformations},
+	volume = {152},
+	issn = {0898-1221},
+	url = {https://www.sciencedirect.com/science/article/pii/S0898122123004650},
+	doi = {10.1016/j.camwa.2023.10.018},
+	abstract = {High-fidelity computer simulations of childbirth remain prohibitively expensive and time consuming, making them impractical for guiding decision-making during obstetric emergencies. Cheap computer simulations that preserve the accuracy of high-fidelity models can be developed using surrogate modeling. Two common approaches to surrogate modeling are physics-based reduced order modeling (ROM) and machine learning (ML), with the latter gaining popularity as the scientific computing community seeks to leverage advances from other, mostly non-physics-based, computational strategies. Although ROM and ML have been compared for various problems, to our knowledge, such a comparison for simulations of vaginal deformations is currently missing. This study provides a baseline numerical comparison between methods from these two fundamentally different approaches. Since there are many methods falling into each modeling approach, to provide a fair and natural comparison, we select a basic model from each category, with each allowing (i) a straightforward implementation in commercial software packages, and (ii) use by practitioners with limited experience in the field. As a benchmark for the numerical comparison of the ROM and ML approaches, we use the finite element (FE) modeling of the ex vivo deformations of rat vaginal tissue subjected to inflation testing to study the effect of a pre-imposed tear. From the ROM strategies, we consider a simplified Galerkin ROM (G-ROM) that is based on the linearization of the underlying nonlinear equations. From the ML strategies, we select a feed-forward neural network to create mappings from constitutive model parameters and luminal pressure values to either the FE displacement history (in which case we denote the resulting model ML) or the proper orthogonal decomposition (POD) coefficients of the displacement history (in which case we denote the resulting model POD-ML). The numerical investigation of G-ROM, ML, and POD-ML takes place in the reconstructive regime. The numerical results show that the G-ROM outperforms the ML model in terms of offline central processing unit (CPU) time for model training, online CPU time required to generate approximations, and relative error with respect to the FE models. The G-ROM achieves superior error performance to the best ML model with 11 POD basis functions. With higher-dimensional POD bases, the G-ROM achieves a relative error 3 orders of magnitude lower than that of the best ML model with an online CPU time still on the same order of magnitude as the best ML model. The POD-ML model improves on the speed performance of the ML, having online CPU times comparable to those of the G-ROM given the same size of POD bases. However, the POD-ML model does not improve on the error performance of the ML and is still outperformed by the G-ROM for POD bases of size greater than 11. This baseline numerical investigation serves as a starting point for future computer simulations that consider state-of-the-art G-ROM and ML strategies, and the in vivo geometry, boundary conditions, and material properties of the human vagina, as well as their changes during labor.},
+	urldate = {2023-10-25},
+	journal = {Computers \& Mathematics with Applications},
+	author = {Snyder, William and Anaya, Alex Santiago and Krometis, Justin and Iliescu, Traian and De Vita, Raffaella},
+	month = dec,
+	year = {2023},
+	keywords = {Machine learning, Finite elements, Galerkin reduced order modeling, Maternal trauma, Vaginal tearing},
+	pages = {168--180},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\jkrometi\\Zotero\\storage\\S6CDU47G\\Snyder et al. - 2023 - A numerical comparison of simplified Galerkin and .pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\jkrometi\\Zotero\\storage\\UT5L43R2\\S0898122123004650.html:text/html},
+	html = {https://www.sciencedirect.com/science/article/pii/S0898122123004650},
+  abbr={CAMWA},
 }
