--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,6 @@
 	title = {Methodological reconstruction of historical seismic events from anecdotal accounts of destructive tsunamis: a case study for the great 1852 Banda arc mega-thrust earthquake and tsunami},
 	arxiv = {2009.14272},
 	year = {2021},
-  selected = {true},
   html = {https://doi.org/10.1029/2020JB021107},
 }
 
@@ -70,17 +69,31 @@
 	volume = {70},
 	year = {2005}}
 
-@article{glatt2020on,
+
+@article{glatt-holtz2023accept,
+  selected = {true},
+  abbr={AAP},
+	title = {On the accept–reject mechanism for {Metropolis}–{Hastings} algorithms},
+	volume = {33},
+	copyright = {All rights reserved},
+	issn = {1050-5164, 2168-8737},
+	url = {https://projecteuclid.org/journals/annals-of-applied-probability/volume-33/issue-6B/On-the-acceptreject-mechanism-for-MetropolisHastings-algorithms/10.1214/23-AAP1948.full},
+	doi = {10.1214/23-AAP1948},
+	abstract = {This work develops a powerful and versatile framework for determining acceptance ratios in Metropolis–Hastings-type Markov kernels widely used in statistical sampling problems. Our approach allows us to derive new classes of kernels which unify random walk or diffusion-type sampling methods with more complicated “extended phase space” algorithms based around ideas from Hamiltonian dynamics. Our starting point is an abstract result developed in the generality of measurable state spaces that addresses proposal kernels that possess a certain involution structure. Note that, while this underlying proposal structure suggests a scope which includes Hamiltonian-type kernels, we demonstrate that our abstract result is, in an appropriate sense, equivalent to an earlier general state space setting developed in (Ann. Appl. Probab. 8 (1998) 1–9) where the connection to Hamiltonian methods was more obscure. On the basis of our abstract results we develop several new classes of extended phase space, HMC-like algorithms. First we tackle the classical finite-dimensional setting of a continuously distributed target measure. We then consider an infinite-dimensional framework for targets which are absolutely continuous with respect to a Gaussian measure with a trace-class covariance. Each of these algorithm classes can be viewed as “surrogate-trajectory” methods, providing a versatile methodology to bypass expensive gradient computations through skillful reduced order modeling and/or data driven approaches as we begin to explore in a forthcoming companion work (Glatt-Holtz et al. (2023)). On the other hand, along with the connection of our main abstract result to the framework in (Ann. Appl. Probab. 8 (1998) 1–9), these algorithm classes provide a unifying picture connecting together a number of popular existing algorithms which arise as special cases of our general frameworks under suitable parameter choices. In particular we show that, in the finite-dimensional setting, we can produce an algorithm class which includes the Metropolis adjusted Langevin algorithm (MALA) and random walk Metropolis method (RWMC) alongside a number of variants of the HMC algorithm including the geometric approach introduced in (J. R. Stat. Soc. Ser. B. Stat. Methodol. 73 (2011) 123–214). In the infinite-dimensional situation, we show that the algorithm class we derive includes the preconditioned Crank–Nicolson (pCN), ∞MALA and ∞HMC methods considered in (Stoch. Dyn. 8 (2008) 319–350; Stochastic Process. Appl. 121 (2011) 2201–2230; Statist. Sci. 28 (2013) 424–446) as special cases.},
+	number = {6B},
+	urldate = {2023-12-14},
+	journal = {The Annals of Applied Probability},
 	author = {Glatt-Holtz, Nathan and Krometis, Justin and Mondaini, Cecilia},
-	date-added = {2021-03-26 09:29:20 -0400},
-	date-modified = {2021-03-26 09:29:20 -0400},
-	journal = {arXiv preprint arXiv:2011.04493},
-	title = {On the accept-reject mechanism for {M}etropolis-{H}astings algorithms},
-	url = {https://arxiv.org/abs/2011.04493},
+	month = dec,
+	year = {2023},
+	note = {Publisher: Institute of Mathematical Statistics},
+	keywords = {65C05, 65P10, Hamiltonian Monte Carlo, Markov chain Monte Carlo (MCMC) algorithms, Metropolis–Hastings algorithms, sampling on abstract state spaces, surrogate trajectory methods},
+	pages = {5279--5333},
+	file = {Full Text PDF:C\:\\Users\\jkrometi\\Zotero\\storage\\EJ6W73KR\\Glatt-Holtz et al. - 2023 - On the accept–reject mechanism for Metropolis–Hast.pdf:application/pdf},
 	arxiv = {2011.04493},
-	year = {2020},
-	Bdsk-Url-1 = {https://arxiv.org/abs/2011.04493},
+	html = {https://projecteuclid.org/journals/annals-of-applied-probability/volume-33/issue-6B/On-the-acceptreject-mechanism-for-MetropolisHastings-algorithms/10.1214/23-AAP1948.full},
 }
+
 
 @article{borggaard2019particle,
   abbr={JCP},
@@ -216,6 +229,7 @@
 }
 
 @article{borggaard2023statistical,
+  selected = {true},
 	title = {A statistical framework for domain shape estimation in {Stokes} flows},
 	volume = {39},
 	issn = {0266-5611},
