source: update cv, add gji article

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -210,22 +210,25 @@
   arxiv = {2209.04750},
 }
 
-@misc{paskett2023tale,
+
+@article{paskett2024tale,
 	title = {A tale of two faults: {Statistical} reconstruction of the 1820 {Flores} {Sea} earthquake using tsunami observations alone},
+	copyright = {All rights reserved},
+	issn = {0956-540X},
 	shorttitle = {A tale of two faults},
-	url = {http://arxiv.org/abs/2305.01718},
-	doi = {10.48550/arXiv.2305.01718},
-	abstract = {Using a Bayesian approach we compare anecdotal tsunami runup observations from the 29 December 1820 Flores Sea earthquake with close to 200,000 tsunami simulations to determine the most probable earthquake parameters causing the tsunami. Using a dual hypothesis of the source earthquake either originating from the Flores Thrust or the Walanae/Selayar Fault, we found that neither source perfectly matches the observational data, particularly while satisfying seismic constraints of the region. However, there is clear quantitative evidence that a major earthquake on the Walanae/Selayar Fault more closely aligns with historical records of the tsunami, and earthquake shaking. The simulated data available from this study alludes to the potential for a different source in the region or the occurrence of an earthquake near where both faults potentially merge and simultaneously rupture similar to the 2016 Kaikoura, New Zealand event.},
-	urldate = {2023-07-25},
-	publisher = {arXiv},
-	author = {Paskett, T. and Whitehead, J. P. and Harris, R. A. and Ashcroft, C. and Krometis, J. A. and Sorensen, I. and Wonnacott, R.},
-	month = may,
-	year = {2023},
-	note = {arXiv:2305.01718 [physics]},
-	keywords = {Physics - Geophysics},
-	annote = {Comment: 22 pages, 9 figures},
-	file = {arXiv Fulltext PDF:C\:\\Users\\jkrometi\\Zotero\\storage\\WQP2G7DV\\Paskett et al. - 2023 - A tale of two faults Statistical reconstruction o.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\jkrometi\\Zotero\\storage\\BJDXVMQI\\2305.html:text/html},
+	url = {https://doi.org/10.1093/gji/ggae044},
+	doi = {10.1093/gji/ggae044},
+	abstract = {Using a Bayesian approach we compare anecdotal tsunami runup observations from the 29 December 1820 Flores Sea earthquake with close to 200,000 tsunami simulations to determine the most probable earthquake parameters causing the tsunami. Using a dual hypothesis of the source earthquake either originating from the Flores Thrust or the Walanae/Selayar Fault, we found that neither source perfectly matches the observational data, particularly while satisfying seismic constraints of the region. Instead both posteriors have shifted to the edge of the prior indicating that the actual earthquake may have run along both faults.},
+	urldate = {2024-02-06},
+	journal = {Geophysical Journal International},
+	author = {Paskett, T and Whitehead, J P and Harris, R A and Ashcraft, C and Krometis, J A and Sorensen, I and Wonnacott, R},
+	month = feb,
+	year = {2024},
+	pages = {ggae044},
+	file = {Full Text PDF:C\:\\Users\\jkrometi\\Zotero\\storage\\XHIRJ5DD\\Paskett et al. - 2024 - A tale of two faults Statistical reconstruction o.pdf:application/pdf;Snapshot:C\:\\Users\\jkrometi\\Zotero\\storage\\DQCTSDIU\\7597896.html:text/html},
 	arxiv = {2305.01718},
+  html = {https://doi.org/10.1093/gji/ggae044},
+  abbr={GJI},
 }
 
 @article{borggaard2023statistical,
